force-app/main/default/objects/HelpTopic__c/HelpTopic__c.object-meta.xml
<CustomObject>
    <description>A concise nugget of context sensitive help</description>
    <label>Help Topic</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Topics</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>