force-app/main/default/objects/HelpTopic__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls the visibility of this Help Topic</description>
    <inlineHelpText>Controls the visibility of this Help Topic: if unchecked, the Topic is not available to Helped Users.</inlineHelpText>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>