force-app/main/default/objects/HelpTopic__c/fields/CalloutHeight__c.field-meta.xml
<CustomField>
    <fullName>CalloutHeight__c</fullName>
    <defaultValue>55</defaultValue>
    <description>Height at which to display this Topic in its Callout template</description>
    <inlineHelpText>Height at which to display this Topic in its Callout template</inlineHelpText>
    <label>Callout Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>