force-app/main/default/objects/HelpTopic__c/fields/CalloutMediaChoice__c.field-meta.xml
<CustomField>
    <fullName>CalloutMediaChoice__c</fullName>
    <inlineHelpText>Select the media to use in Help Topic previews</inlineHelpText>
    <label>Callout Media Choice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Image</fullName>
                <default>true</default>
                <label>Image</label>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>