force-app/main/default/objects/HelpTopic__c/fields/CalloutTemplate__c.field-meta.xml
<CustomField>
    <fullName>CalloutTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Help Topic Template to use to display summary help when viewing Callouts</description>
    <inlineHelpText>The Help Topic Template to use to display summary help when viewing Callouts</inlineHelpText>
    <label>Callout Template</label>
    <referenceTo>HelpTopicTemplate__c</referenceTo>
    <relationshipLabel>Help Topics (Callout Template)</relationshipLabel>
    <relationshipName>HelpTopics1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>