force-app/main/default/objects/HelpTopic__c/fields/CustomStyle__c.field-meta.xml
<CustomField>
    <fullName>CustomStyle__c</fullName>
    <description>The custom style class, if any, to apply to this particular Help Topic</description>
    <inlineHelpText>The custom style class, if any, to apply to this particular Help Topic</inlineHelpText>
    <label>Custom Style</label>
    <length>25</length>
    <type>Text</type>
</CustomField>