force-app/main/default/objects/HelpTopic__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Full details of this Help Topic</description>
    <inlineHelpText>Full details of this Help Topic</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>