force-app/main/default/objects/HelpTopic__c/fields/DescriptionText2__c.field-meta.xml
<CustomField>
    <fullName>DescriptionText2__c</fullName>
    <description>Partial plain text version of the Help Topic&apos;s (rich text) Description</description>
    <inlineHelpText>Partial plain text version of the Help Topic&apos;s (rich text) Description</inlineHelpText>
    <label>Description Text 2</label>
    <type>TextArea</type>
</CustomField>