force-app/main/default/objects/HelpTopic__c/fields/GuideCallout__c.field-meta.xml
<CustomField>
    <fullName>GuideCallout__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines whether the Callout associated with the featured Helped Element will appear automatically on arrival at this Guide Step</description>
    <inlineHelpText>Defines whether the Callout associated with the featured Helped Element will appear automatically on arrival at this Guide Step</inlineHelpText>
    <label>Show Callout?</label>
    <type>Checkbox</type>
</CustomField>