force-app/main/default/objects/HelpTopic__c/fields/GuidedElement__c.field-meta.xml
<CustomField>
    <fullName>GuidedElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Helped Element to View in Place when using this Topic as a step in a Guide</description>
    <inlineHelpText>The Helped Element to View in Place when using this Topic as a step in a Guide</inlineHelpText>
    <label>Step Element</label>
    <referenceTo>HelpedElement__c</referenceTo>
    <relationshipLabel>Guided ViP Help Topics</relationshipLabel>
    <relationshipName>Help_Topics</relationshipName>
    <type>Lookup</type>
</CustomField>