force-app/main/default/objects/HelpTopic__c/fields/GuidedLayout__c.field-meta.xml
<CustomField>
    <fullName>GuidedLayout__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Helped Page Layout in which View In Place will be triggered when this Topic forms part of a Guide</description>
    <inlineHelpText>The Helped Page Layout in which View In Place will be triggered when this Topic forms part of a Guide</inlineHelpText>
    <label>Step Layout</label>
    <referenceTo>HelpedPageLayout__c</referenceTo>
    <relationshipLabel>Guide Help Topics</relationshipLabel>
    <relationshipName>Help_Topics</relationshipName>
    <type>Lookup</type>
</CustomField>