force-app/main/default/objects/HelpTopic__c/fields/GuidedRecord__c.field-meta.xml
<CustomField>
    <fullName>GuidedRecord__c</fullName>
    <description>If desired, specify the ID of a specific Salesforce object record to display on the Guide step associated with this Topic: leave blank to use the record the User is currently viewing.</description>
    <inlineHelpText>If desired, specify the ID of a specific Salesforce object record to display on the Guide step associated with this Topic: leave blank to use the record the User is currently viewing.</inlineHelpText>
    <label>Step Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>