force-app/main/default/objects/HelpTopic__c/fields/GuideStepMode__c.field-meta.xml
<CustomField>
    <fullName>GuideStepMode__c</fullName>
    <description>Controls the way in which users will navigate from Step to Step when this Topic forms part of a Guide</description>
    <inlineHelpText>Controls the way in which users will navigate from Step to Step when this Topic forms part of a Guide</inlineHelpText>
    <label>Step Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
                <default>true</default>
                <label>Automatic</label>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>