force-app/main/default/objects/HelpTopic__c/fields/HeightBeforeScrolling__c.field-meta.xml
<CustomField>
    <fullName>HeightBeforeScrolling__c</fullName>
    <defaultValue>530</defaultValue>
    <description>The height at which to display this Help Topic</description>
    <inlineHelpText>The height at which to display this Help Topic</inlineHelpText>
    <label>Height Before Scrolling</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>