force-app/main/default/objects/HelpTopic__c/fields/HelpVoteSet__c.field-meta.xml
<CustomField>
    <fullName>HelpVoteSet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines availability and nature of voting interactions for this Topic</description>
    <inlineHelpText>Defines availability and nature of voting interactions for this Topic</inlineHelpText>
    <label>Help Vote Set</label>
    <referenceTo>HelpVoteSet__c</referenceTo>
    <relationshipLabel>Help Topics</relationshipLabel>
    <relationshipName>Help_Topics</relationshipName>
    <type>Lookup</type>
</CustomField>