force-app/main/default/objects/HelpTopic__c/fields/ImageALTText__c.field-meta.xml
<CustomField>
    <fullName>ImageALTText__c</fullName>
    <description>The text of the image&apos;s ALT tag</description>
    <inlineHelpText>The text of the image&apos;s ALT tag</inlineHelpText>
    <label>Image ALT Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>