force-app/main/default/objects/HelpTopic__c/fields/ImageCaption__c.field-meta.xml
<CustomField>
    <fullName>ImageCaption__c</fullName>
    <description>A caption to display with the ImageThe text of the image&apos;s ALT tag</description>
    <inlineHelpText>A caption to display with the ImageThe text of the image&apos;s ALT tag</inlineHelpText>
    <label>Image Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>