force-app/main/default/objects/HelpTopic__c/fields/ImageHeight__c.field-meta.xml
<CustomField>
    <fullName>ImageHeight__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The height (in pixels) at which to display the Image</description>
    <inlineHelpText>The height (in pixels) at which to display the Image</inlineHelpText>
    <label>Image Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>