force-app/main/default/objects/HelpTopic__c/fields/ImageListIcon__c.field-meta.xml
<CustomField>
    <fullName>ImageListIcon__c</fullName>
    <formula>IMAGE( ImageURL__c ,  ImageALTText__c  , 36, 48)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula creating Help Topic Image icon for list views</inlineHelpText>
    <label>Image List Icon</label>
    <type>Text</type>
</CustomField>