force-app/main/default/objects/HelpTopic__c/fields/ImageTitle__c.field-meta.xml
<CustomField>
    <fullName>ImageTitle__c</fullName>
    <inlineHelpText>The Title of this Help Topic&apos;s Image</inlineHelpText>
    <label>Image Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>