force-app/main/default/objects/HelpTopic__c/fields/ImageURL__c.field-meta.xml
<CustomField>
    <fullName>ImageURL__c</fullName>
    <description>Full web address of the image to associate with this Help Topic</description>
    <inlineHelpText>Full web address of the image to associate with this Help Topic</inlineHelpText>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>