force-app/main/default/objects/HelpTopic__c/fields/ImageWidth__c.field-meta.xml
<CustomField>
    <fullName>ImageWidth__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The width (in pixels) at which to display the Image</description>
    <inlineHelpText>The width (in pixels) at which to display the Image</inlineHelpText>
    <label>Image Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>