force-app/main/default/objects/HelpTopic__c/fields/Keyword__c.field-meta.xml
<CustomField>
    <fullName>Keyword__c</fullName>
    <description>A keyword or short phrase with which to associate this Topic. Other Topics will automatically link to this one if they contain these words</description>
    <inlineHelpText>A keyword or short phrase with which to associate this Topic. Other Topics will automatically link to this one if they contain these words</inlineHelpText>
    <label>Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>