force-app/main/default/objects/HelpTopic__c/fields/KeywordPhraseLength__c.field-meta.xml
<CustomField>
    <fullName>KeywordPhraseLength__c</fullName>
    <description>Calculates Keyword phrase length to prioritise matches for parsing into related content</description>
    <formula>LEN( Keyword__c ) - LEN( SUBSTITUTE( Keyword__c , &quot; &quot;, &quot;&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates Keyword phrase length to prioritise matches for parsing into related content</inlineHelpText>
    <label>Keyword Phrase Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>