force-app/main/default/objects/HelpTopic__c/fields/LightningTemplate__c.field-meta.xml
<CustomField>
    <fullName>LightningTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The page layout to use when displaying the full text of this Help Topic in the Lightning viewer component</description>
    <inlineHelpText>The page layout to use when displaying the full text of this Help Topic in the Lightning viewer component</inlineHelpText>
    <label>Lightning Template</label>
    <referenceTo>HelpTopicTemplate__c</referenceTo>
    <relationshipLabel>Help Topics (Lightning Template)</relationshipLabel>
    <relationshipName>Help_Topics1</relationshipName>
    <type>Lookup</type>
</CustomField>