force-app/main/default/objects/HelpTopic__c/fields/MasterTopicIdentifier__c.field-meta.xml
<CustomField>
    <fullName>MasterTopicIdentifier__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>A unique string (piece of text) that survives migration between - and thus can be used to identify this Topic - across orgs.</description>
    <inlineHelpText>A unique string (piece of text) that survives migration between - and thus can be used to identify this Topic - across orgs.</inlineHelpText>
    <label>Master Topic Identifier</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>