force-app/main/default/objects/HelpTopic__c/fields/SalesforceHelpURL__c.field-meta.xml
<CustomField>
    <fullName>SalesforceHelpURL__c</fullName>
    <inlineHelpText>URL to standard Salesforce Help associated with this Help Topic (optional, if applicable)</inlineHelpText>
    <label>Salesforce Help URL</label>
    <type>Url</type>
</CustomField>