force-app/main/default/objects/HelpTopic__c/fields/ShowReadMoreLink__c.field-meta.xml
<CustomField>
    <fullName>ShowReadMoreLink__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Controls whether or not this Help Topic will feature a &quot;Read More&quot; link in its callouts</description>
    <inlineHelpText>Controls whether or not this Help Topic will feature a &quot;Read More&quot; link in its callouts</inlineHelpText>
    <label>Show Read More Link?</label>
    <type>Checkbox</type>
</CustomField>