force-app/main/default/objects/HelpTopic__c/fields/ShowReferringRelationships__c.field-meta.xml
<CustomField>
    <fullName>ShowReferringRelationships__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to override global settings regarding the display of topics referring TO the current one in the Related Help Topics listing</description>
    <inlineHelpText>Check to override global settings regarding the display of topics referring TO the current one in the Related Help Topics listing</inlineHelpText>
    <label>Show Referring Topics?</label>
    <type>Checkbox</type>
</CustomField>