force-app/main/default/objects/HelpTopic__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <defaultValue>&quot;Newly created help topic - details pending&quot;</defaultValue>
    <description>A brief summary of the full Help Topic that appears when Improved Help is first shown (before the full Topic is requested)</description>
    <inlineHelpText>A brief summary of the full Help Topic that appears when Improved Help is first shown (before the full Topic is requested)</inlineHelpText>
    <label>Summary</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>