force-app/main/default/objects/HelpTopic__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The page layout to use when displaying the full text of this Help Topic</description>
    <inlineHelpText>The page layout to use when displaying the full text of this Help Topic</inlineHelpText>
    <label>Template</label>
    <referenceTo>HelpTopicTemplate__c</referenceTo>
    <relationshipLabel>Help Topics</relationshipLabel>
    <relationshipName>Help_Topics</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>