force-app/main/default/objects/HelpTopic__c/fields/Thumbnail__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail__c</fullName>
    <description>Preview thumbnail of the image selected for this Help Topic</description>
    <formula>IMAGE( ImageURL__c , ImageALTText__c, ImageHeight__c , ImageWidth__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Preview thumbnail of the image selected for this Help Topic</inlineHelpText>
    <label>Thumbnail</label>
    <type>Text</type>
</CustomField>