force-app/main/default/objects/HelpTopic__c/fields/VideoCaption__c.field-meta.xml
<CustomField>
    <fullName>VideoCaption__c</fullName>
    <description>A caption to display below any video clip selected for this Help Topic</description>
    <inlineHelpText>A caption to display below any video clip selected for this Help Topic</inlineHelpText>
    <label>Video Caption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>