force-app/main/default/objects/HelpTopic__c/fields/VideoHeight__c.field-meta.xml
<CustomField>
    <fullName>VideoHeight__c</fullName>
    <description>The height of the player that should be used to show any video associated with this Help Topic</description>
    <inlineHelpText>The height of the player that should be used to show any video associated with this Help Topic</inlineHelpText>
    <label>Video Height</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>