force-app/main/default/objects/HelpTopic__c/fields/VideoTitle__c.field-meta.xml
<CustomField>
    <fullName>VideoTitle__c</fullName>
    <inlineHelpText>The Title of this Help Topic&apos;s Video</inlineHelpText>
    <label>Video Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>