force-app/main/default/objects/HelpTopic__c/fields/VideoURL__c.field-meta.xml
<CustomField>
    <fullName>VideoURL__c</fullName>
    <description>The full web address of the video clip to associate with this Help Topic</description>
    <inlineHelpText>The full web address of the video clip to associate with this Help Topic</inlineHelpText>
    <label>Video URL</label>
    <type>TextArea</type>
</CustomField>