force-app/main/default/objects/HelpTopic__c/fields/VideoWidth__c.field-meta.xml
<CustomField>
    <fullName>VideoWidth__c</fullName>
    <description>The width of the player that should be used to show any video associated with this Help Topic</description>
    <inlineHelpText>The width of the player that should be used to show any video associated with this Help Topic</inlineHelpText>
    <label>Video Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>