force-app/main/default/objects/HelpTopic__c/fields/ViewInPortalLink__c.field-meta.xml
<CustomField>
    <fullName>ViewInPortalLink__c</fullName>
    <description>Automatically generated hyperlink to view this item in the Improved Help SF1 Portal</description>
    <formula>HYPERLINK(&quot;/apex/iahelp__IHToolsLUX?HTID=&quot;&amp;Id, &quot;View in Portal&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Automatically generated hyperlink to view this item in the Improved Help SF1 Portal</inlineHelpText>
    <label>View in Portal</label>
    <type>Text</type>
</CustomField>