force-app/main/default/objects/HelpTopic__c/listViews/AllHelpTopics.listView-meta.xml
<ListView>
    <fullName>AllHelpTopics</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Keyword__c</columns>
    <columns>Visibility__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Keyword__c</field>
        <operation>notEqual</operation>
        <value>Null</value>
    </filters>
    <filters>
        <field>VideoURL__c</field>
        <operation>notEqual</operation>
        <value>Null</value>
    </filters>
    <label>All Help Topics</label>
</ListView>