force-app/main/default/objects/HelpTopic__c/listViews/AllImageHelpTopics.listView-meta.xml
<ListView>
    <fullName>AllImageHelpTopics</fullName>
    <columns>ImageListIcon__c</columns>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>ImageURL__c</columns>
    <columns>Active__c</columns>
    <columns>Visibility__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ImageURL__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Topics with Images</label>
</ListView>