force-app/main/default/objects/HelpTopic__c/listViews/AllInActiveHelpTopics.listView-meta.xml
<ListView>
    <fullName>AllInActiveHelpTopics</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Visibility__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Topics</label>
</ListView>