force-app/main/default/objects/HelpTopic__c/listViews/AllMyHelpTopics.listView-meta.xml
<ListView>
    <fullName>AllMyHelpTopics</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>ImageListIcon__c</columns>
    <columns>ImageURL__c</columns>
    <columns>VideoURL__c</columns>
    <columns>Active__c</columns>
    <columns>Visibility__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Help Topics</label>
</ListView>