force-app/main/default/objects/HelpTopic__c/listViews/AllMyInActiveHelpTopics.listView-meta.xml
<ListView>
    <fullName>AllMyInActiveHelpTopics</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>ImageListIcon__c</columns>
    <columns>ImageURL__c</columns>
    <columns>VideoURL__c</columns>
    <columns>Active__c</columns>
    <columns>Visibility__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Inactive Help Topics</label>
</ListView>