force-app/main/default/objects/HelpTopic__c/listViews/AllNewHelpTopics.listView-meta.xml
<ListView>
    <fullName>AllNewHelpTopics</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Active__c</columns>
    <columns>Visibility__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HelpTopicStatus__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Newly Created/Empty Help Topics</label>
</ListView>