force-app/main/default/objects/HelpTopic__c/listViews/AllSFDCHelpTopics.listView-meta.xml
<ListView>
    <fullName>AllSFDCHelpTopics</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>SalesforceHelpURL__c</columns>
    <columns>Active__c</columns>
    <columns>Visibility__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SalesforceHelpURL__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Topics with SFDC Links</label>
</ListView>