force-app/main/default/objects/HelpTopic__c/listViews/AllUnboundHelpTopics.listView-meta.xml
<ListView>
    <fullName>AllUnboundHelpTopics</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Active__c</columns>
    <columns>Visibility__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>unbound</value>
    </filters>
    <label>Unbound Help Topics</label>
</ListView>