force-app/main/default/objects/HelpTopic__c/listViews/AllVideoHelpTopics.listView-meta.xml
<ListView>
    <fullName>AllVideoHelpTopics</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>VideoURL__c</columns>
    <columns>Active__c</columns>
    <columns>Visibility__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VideoURL__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Topics with Videos</label>
</ListView>