force-app/main/default/objects/HelpTopic__c/listViews/Created_Today.listView-meta.xml
<ListView>
    <fullName>Created_Today</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Created Today</label>
</ListView>