force-app/main/default/objects/HelpTopic__c/listViews/Keyword_Topics.listView-meta.xml
<ListView>
    <fullName>Keyword_Topics</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Keyword__c</columns>
    <columns>HelpTopicStatus__c</columns>
    <columns>Visibility__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Keyword__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Keyword Topics</label>
</ListView>