force-app/main/default/objects/HelpTopic__c/listViews/X8_All_Help_Topics_Linked_to_a_Layout.listView-meta.xml
<ListView>
    <fullName>X8_All_Help_Topics_Linked_to_a_Layout</fullName>
    <columns>GuidedLayout__c</columns>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Active__c</columns>
    <columns>GuidedElement__c</columns>
    <columns>GuideStepMode__c</columns>
    <columns>GuideCallout__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>GuidedLayout__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Topics Linked to a Layout</label>
</ListView>